Footer: Spacing fix for links (a11y)

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -49,6 +49,7 @@
   li {
     list-style: none;
     line-height: 1.8333;
+    padding: 6px 0;
   }
 
   [class*="uos-"] {
